--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "First project with GraphQL",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "MallamTY",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.6.0"
+    "graphql": "^15.8.0",
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.0"
   }
 }
